# lddc-android

./: settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/lalilu/lddc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  taglibWrapper.cpp
app/src/main/java/com/lalilu/lddc/: FloatActivity.kt  MainActivity.kt
app/src/main/java/com/lalilu/lddc/component/: SongCard.kt
app/src/main/java/com/lalilu/lddc/entity/: Lyric.kt  Song.kt
app/src/main/java/com/lalilu/lddc/screen/: FloatScreen.kt
app/src/main/java/com/lalilu/lddc/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/lalilu/lddc/util/: DesHelper.kt  LrcParser.kt  LyricResultCache.kt  QrcDecryptor.kt  QrcParser.kt  QrcXML.kt  QrcXmlParser.kt
app/src/main/java/com/lalilu/lddc/viewmodel/: MainViewModel.kt
app/src/main/java/com/lalilu/lmedia/entity/: Metadata.kt
app/src/main/java/com/lalilu/lmedia/wrapper/: Taglib.kt
app/src/main/res/raw/: test.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/lalilu/lddc/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
